@@ -188,11 +188,15 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.13.0</version>
             <configuration>
-                <source>17</source> <!-- or your project's Java version -->
-                <target>17</target> <!-- or your project's Java version -->
+                <source>17</source>
+                <target>17</target>
                 <compilerArgs>
                     <arg>--add-opens</arg>
                     <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    <arg>--add-opens</arg>
+                    <arg>java.base/java.lang=ALL-UNNAMED</arg>
+                    <arg>--add-opens</arg>
+                    <arg>java.base/java.lang.reflect=ALL-UNNAMED</arg>
                 </compilerArgs>
             </configuration>
         </plugin>
